--- a/Word_of_ModJirawut/Views/Project/Create.cshtml
+++ b/Word_of_ModJirawut/Views/Project/Create.cshtml
@@ -1,11 +1,17 @@
 ﻿@model Project;
 @{
-    ViewData["Title"] = "รายการจัดซื้อ";
+    ViewData["Title"] = "รายการ";
 }
 
-<h1 class="text-center">รายการจัดซื้อ</h1>
+<h1 class="text-center">รายการ</h1>
 
 <form method="post" asp-controller="Project" asp-action="Create">
+    <div class="form-group">
+        <label asp-for="IdProduct"></label>
+        <input type="number" asp-for="IdProduct" class="form-control" />
+        <span asp-validation-for="IdProduct" class="text-danger"></span>
+    </div>
+
     <div class="form-group">
         <label asp-for="Name"></label>
         <input type="text" asp-for="Name" class="form-control" />
@@ -37,4 +43,40 @@
     </div>
 
     <button type="submit" class="btn btn-primary my-2">บันทึก</button>
+    <a class="btn btn-danger my-2" asp-area="" asp-controller="Project" asp-action="Index">ยกเลิก</a>
+
+
 </form>
+
+@section Scripts {
+    <script>
+        const priceUnitInput = document.getElementById('PriceUnit');
+        const qtyInput = document.getElementById('Qty');
+        const priceInput = document.getElementById('Price');
+
+        priceUnitInput.addEventListener('input', calculateTotalPrice);
+        qtyInput.addEventListener('input', calculateTotalPrice);
+
+        function calculateTotalPrice() {
+            const priceUnit = parseFloat(priceUnitInput.value) || 0;
+            const qty = parseFloat(qtyInput.value) || 0;
+
+            const totalPrice = priceUnit * qty;
+            priceInput.value = totalPrice.toFixed(0); 
+        }
+
+        const noteInput = document.getElementById('Note');
+        const submitButton = document.querySelector('button[type="submit"]');
+
+        noteInput.addEventListener('input', () => {
+            // ตรวจสอบว่ามีข้อมูลในช่อง Note หรือไม่
+            if (noteInput.value.trim() === '') {
+                // ถ้าไม่มีข้อมูลในช่อง Note เปิดปุ่มบันทึก
+                submitButton.disabled = false;
+            } else {
+                // ถ้ามีข้อมูลในช่อง Note ปิดปุ่มบันทึก
+                submitButton.disabled = false;
+            }
+        });
+    </script>
+}
