Your commit message here

--- a/Word_of_ModJirawut/Views/Project/Edit.cshtml
+++ b/Word_of_ModJirawut/Views/Project/Edit.cshtml
@@ -6,7 +6,7 @@
 <h1 class="text-center">แก้ไขข้อมูล</h1>
 
 <form method="post" asp-controller="Project" asp-action="Edit">
-<<<<<<< HEAD
+ HEAD
     
     <div class="form-group">
         <label asp-for="IdProduct"></label>
